extended portfolio page and fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -3,18 +3,23 @@
 	padding: 0;
 }
 
+body {
+	display: block;
+	height: 100%;
+	background: linear-gradient(black, rgb(24, 23, 23), rgb(28, 19, 53), black);
+	overflow: auto;
+}
+
 .site-body {
 	background: linear-gradient(black, rgb(24, 23, 23), rgb(28, 19, 53), black);
-	/* height: auto; */
 	display: grid;
 	justify-content: center;
 	grid-template-columns: 0.5fr 4fr 3fr 0.5fr;
-	grid-template-rows: 50px 650px 80px;
+	grid-template-rows: 10% 80% 10%;
 	grid-template-areas:
 		'. header navbar .'
 		'. body body .'
 		'. footer footer .';
-	/* grid-gap: 10px; */
 }
 
 .header {
