--- a/src/footer.css
+++ b/src/footer.css
@@ -1,6 +1,9 @@
 .footer {
 	display: flex;
 	flex-direction: column-reverse;
+	flex-shrink: 0;
+	position: relative;
+	bottom: 0;
 }
 
 .footer p {
