--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -1,7 +1,7 @@
 .portfolio {
 	background-image: url('./portfolio.jpg');
 	background-size: cover;
-	height: 650px;
+	height: 1000px;
 	display: grid;
 	grid-template-rows: 1fr 1fr 1fr;
 	grid-template-areas: 'one two three';
